--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,22 +5,27 @@ on:
 jobs:
   Test:
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref_name }}-test
+      cancel-in-progress: true
+    timeout-minutes: 2
     steps:
-      - &checkout
-        uses: actions/checkout@v4
-      - &setup-go
-        uses: actions/setup-go@v5
-        with:
-          go-version-file: go.mod
-          cache-dependency-path: "**/go.sum"
+      - uses: actions/checkout@v4
+      - run: echo "::notice title=Go Version::$(go version)"
       - run: make test
-        # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions
-      - run: echo "::notice title=Test Coverage::$(go tool cover -func=unit.cov|tail -n1|tr -s "\t")"
   Lint:
     runs-on: ubuntu-latest
-    needs: [Test]
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref_name }}-lint
+      cancel-in-progress: true
+    timeout-minutes: 4
     steps:
-      - *checkout
-      - *setup-go
+      - uses: actions/checkout@v4
+      - uses: actions/cache@v4
+        with:
+          key: golangci-lint-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
       - run: make lint
       - run: make shellcheck
