Simplified working with IsEoas and IsLts, etc. as they were *bool fields,
and handling them in text/template was "funky".

Also added a proactive "EOL checker", eol_within(N{h,m,s,d,wk,mo}) to be
able to verify what is expiring "soon" (where end users pick what soon means).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: echo "::notice title=Go Version::$(go version)"
+      # Needed until https://github.com/golang/go/issues/75031 is fixed.
+      - run: go env -w GOTOOLCHAIN=go1.25.0+auto
       - run: make test
   Lint:
     runs-on: ubuntu-latest
@@ -27,5 +29,7 @@ jobs:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
+      # Needed until https://github.com/golang/go/issues/75031 is fixed.
+      - run: go env -w GOTOOLCHAIN=go1.25.0+auto
       - run: make lint
       - run: make shellcheck
