--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,10 @@ name: Auto-Release
 
 on:
   push:
-    tags: ["v[0-9].[0-9]+.[0-9]+"]
+    tags: [v1.*]
+
+permissions:
+  contents: write
 
 jobs:
   Release:
