Complete refactoring, from a prime example of overengineering
the LOC is down from 8748 -> 1004, while maintaining same level of
code coverage & retaining 90% of functionality (only caching
was removed).

Caching was dropped as the expected use cases are mostly in CI,
checking for 1-10? releases so caching would hardly ever
be useful.

Also, added a bit of colors. And a command to generate a SVG
badge for a product release (appropriately color coded based
on EOL, EOAS or MAINTAINED).

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,13 +2,9 @@ version: "2"
 linters:
   default: all
   disable:
-    - embeddedstructfieldcheck
     - exhaustruct
     - noinlineerr
     - nonamedreturns
-    - tagliatelle
-    - testpackage
-    - wrapcheck
     - wsl # deprecated
   settings:
     cyclop:
@@ -172,13 +168,14 @@ linters:
         - i int
         - j int
         - t testing.T
+        - t *template.Template
         - b testing.B
         - T any
         - f *os.File
-        - c Client
-        - c Config
-        - c *Client
-        - c *Config
+        - c client
+        - c *client
+        - r *http.Request
+        - w *http.Response
     wsl:
       strict-append: true
       allow-assign-and-call: true
@@ -192,14 +189,9 @@ linters:
     warn-unused: true
     generated: strict
     rules:
-      - linters: [errcheck]
-        text: Error return value of `c.Print
       - linters: [forbidigo]
         text: Use t.Context
         path-except: _test\.go
-      - linters: [gosec]
-        text: G104
-        source: c.Print
       - linters:
           - bodyclose
           - cyclop
